--- a/mock/package.json
+++ b/mock/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "@clerk/clerk-react": "^5.29.0",
     "chart.js": "^4.4.4",
+    "lucide-react": "^0.503.0",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.1.0"
