--- a/mock/.env
+++ b/mock/.env
@@ -1,8 +1,12 @@
 VITE_CLERK_PUBLISHABLE_KEY=pk_test_ZnVubnktY291Z2FyLTk4LmNsZXJrLmFjY291bnRzLmRldiQ
 CLERK_SECRET_KEY=sk_test_20kxFeNdS1AzUXC8jWAxhDaHwCSaZ1PqNSb6yknopB
 
-E2E_CLERK_USER_USERNAME=notreal@example.com
-E2E_CLERK_USER_PASSWORD=notrealnotreal
-
 E2E_CLERK_USER_USERNAME_BROWN=test@brown.edu
-E2E_CLERK_USER_PASSWORD_BROWN=ilovecs32
+E2E_CLERK_USER_PASSWORD_BROWN=testbrown
+
+API_KEY = AIzaSyD91N2eTzMuaSjfNTsuWknhEB7rdN9JNK8
+AUTH_DOMAIN = health-rcsakai.firebaseapp.com
+PROJECT_ID = health-rcsakai
+STORAGE_BUCKET = health-rcsakai.firebasestorage.app
+MESSAGING_SENDER_ID= 931508177723
+APP_ID= 1:931508177723:web:d141ace6d5ab8f3d32451e
