--- a/.gitignore
+++ b/.gitignore
@@ -16,7 +16,7 @@ test-results/
 playwright-report/
 playwright/.cache/
 
-server/src/main/resources/
+server/src/main/resources/firebase_config.json
 
 # mac
 .DS_Store
