feat: added base tests

--- a/mock/.env
+++ b/mock/.env
@@ -1,8 +1,9 @@
-VITE_CLERK_PUBLISHABLE_KEY=pk_test_ZnVubnktY291Z2FyLTk4LmNsZXJrLmFjY291bnRzLmRldiQ
-CLERK_SECRET_KEY=sk_test_20kxFeNdS1AzUXC8jWAxhDaHwCSaZ1PqNSb6yknopB
+VITE_CLERK_PUBLISHABLE_KEY=pk_test_ZmluZXItdGVycmllci0zNi5jbGVyay5hY2NvdW50cy5kZXYk
+CLERK_SECRET_KEY=sk_test_KzKXvagtcvASwvdtCYK1EkPrCTSf8Bbk5jbKbfXqMy
+CLERK_FRONTEND_API=https://finer-terrier-36.clerk.accounts.dev
 
-E2E_CLERK_USER_USERNAME_BROWN=test@brown.edu
-E2E_CLERK_USER_PASSWORD_BROWN=testbrown
+E2E_CLERK_USER_USERNAME_BROWN=shouldwork@brown.edu
+E2E_CLERK_USER_PASSWORD_BROWN=shouldworkshouldwork
 
 API_KEY = AIzaSyD91N2eTzMuaSjfNTsuWknhEB7rdN9JNK8
 AUTH_DOMAIN = health-rcsakai.firebaseapp.com
